[gd_scene load_steps=15 format=3 uid="uid://deysfbp5dciau"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_2gqeh"]
[ext_resource type="Texture2D" uid="uid://bistvntuy2ass" path="res://assets/buttons/button_start.png" id="2_5nw5b"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="2_52ydn"]
[ext_resource type="Texture2D" uid="uid://dnj3poa5dtw6w" path="res://assets/buttons/button_start_hover.png" id="4_eqslh"]
[ext_resource type="Texture2D" uid="uid://b56nuauvvowtx" path="res://assets/buttons/button_continue.png" id="5_v1tuq"]
[ext_resource type="Texture2D" uid="uid://d0vw6wvytcn67" path="res://assets/buttons/button_continue_hover.png" id="6_3onn1"]
[ext_resource type="Texture2D" uid="uid://dtoqb8oy5l8bx" path="res://assets/guys/water_guy_new_frames.png" id="7_yocyh"]
[ext_resource type="Texture2D" uid="uid://bfdshtoojdsc2" path="res://assets/buttons/button_settings.png" id="8_fqpdf"]
[ext_resource type="Texture2D" uid="uid://bmjvhr0qy1ufh" path="res://assets/buttons/button_settings_hover.png" id="9_8bkmq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pnrdv"]
atlas = ExtResource("7_yocyh")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0xkp"]
atlas = ExtResource("7_yocyh")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2tjp2"]
atlas = ExtResource("7_yocyh")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbefk"]
atlas = ExtResource("7_yocyh")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mdif4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnrdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0xkp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2tjp2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbefk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainScene" type="Node"]
script = ExtResource("1_2gqeh")

[node name="HUD" type="Node" parent="."]

[node name="Menu" type="Node" parent="."]
script = ExtResource("2_52ydn")

[node name="Camera2D" type="Camera2D" parent="Menu"]
position = Vector2(72, 39)
zoom = Vector2(7.335, 7.335)

[node name="StartButton" type="TextureButton" parent="Menu"]
offset_right = 32.0
offset_bottom = 16.0
texture_normal = ExtResource("2_5nw5b")
texture_hover = ExtResource("4_eqslh")

[node name="ContinueButton" type="TextureButton" parent="Menu"]
offset_top = 38.0
offset_right = 40.0
offset_bottom = 54.0
texture_normal = ExtResource("5_v1tuq")
texture_hover = ExtResource("6_3onn1")

[node name="SettingsButton" type="TextureButton" parent="Menu"]
offset_top = 56.0
offset_right = 40.0
offset_bottom = 72.0
texture_normal = ExtResource("8_fqpdf")
texture_hover = ExtResource("9_8bkmq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Menu"]
position = Vector2(85, 47)
scale = Vector2(3.12417, 3.12417)
sprite_frames = SubResource("SpriteFrames_mdif4")
autoplay = "default"

[node name="Main2D" type="Node2D" parent="."]

[connection signal="pressed" from="Menu/StartButton" to="." method="_on_start_button_pressed"]
